Stopped pdf-viewer from producing scrollbars

--- a/client/src/app/site/pages/meetings/modules/projector/modules/slides/components/mediafile-slide/components/mediafile-slide.component.scss
+++ b/client/src/app/site/pages/meetings/modules/projector/modules/slides/components/mediafile-slide/components/mediafile-slide.component.scss
@@ -31,7 +31,10 @@
         bottom: 0;
         left: 0;
         right: 0;
-        pointer-events: none;
+
+        ::ng-deep div {
+            overflow: hidden;
+        }
     }
 }
 
